Fixes SerializedObjectsCompatTest for 4.1
Adds serialized objects samples captured from 4.0